new proj/src/objects/GE_ES_Deviation_Approver_Role__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Deviation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Factor Deviation</label>
        <referenceTo>GE_ES_Risk_Factor_Deviation__c</referenceTo>
        <relationshipLabel>Deviation Approver Roles</relationshipLabel>
        <relationshipName>Deviation_Approver_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>GE_ES_Role__c</referenceTo>
        <relationshipLabel>Deviation Approver Roles</relationshipLabel>
        <relationshipName>Deviation_Approver_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deviation Approver Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Risk_Factor_Deviation__c</columns>
        <columns>GE_ES_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DA{00000}</displayFormat>
        <label>Deviation Approver Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviation Approver Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Role</fullName>
        <active>true</active>
        <description>You must specify an ES Role for each Deviation Approver Role record</description>
        <errorConditionFormula>GE_ES_Role__c == &apos;&apos;</errorConditionFormula>
        <errorDisplayField>GE_ES_Role__c</errorDisplayField>
        <errorMessage>You must specify a Role for each Deviation Approver Role record</errorMessage>
    </validationRules>
</CustomObject>